[gd_scene load_steps=12 format=3 uid="uid://cmooqripkn2pq"]

[ext_resource type="Script" path="res://MainPage.gd" id="1_2c2q0"]
[ext_resource type="PackedScene" uid="uid://dkk4ce7nk7mdd" path="res://BG.tscn" id="2_hjpnk"]
[ext_resource type="Texture2D" uid="uid://d0dc81i4vmo7o" path="res://png/MainScene/抽卡.png" id="3_k2bps"]
[ext_resource type="FontFile" uid="uid://c8kfctqkt4qdk" path="res://png/大部分的字體/04B_30__.TTF" id="3_k8ob0"]
[ext_resource type="Texture2D" uid="uid://biylss5ftb8tj" path="res://png/MainScene/背包.png" id="4_7i2un"]
[ext_resource type="FontFile" uid="uid://s44dpneaad4g" path="res://png/id字體.ttf" id="5_lp0p5"]
[ext_resource type="Texture2D" uid="uid://do4wqlhjrjojy" path="res://png/MainScene/新房間.png" id="5_rbwjw"]
[ext_resource type="Texture2D" uid="uid://btq68yp1u4500" path="res://png/MainScene/快速配對.png" id="6_gv30g"]
[ext_resource type="Texture2D" uid="uid://badl5u37qsvol" path="res://png/MainScene/選角.png" id="7_mprot"]
[ext_resource type="Texture2D" uid="uid://dx6hnbxjvo60q" path="res://png/MainScene/改名字的筆.png" id="8_82va6"]
[ext_resource type="Texture2D" uid="uid://dsl3ecoy1s3pn" path="res://png/MainScene/錢跟鑽.png" id="9_gqaaq"]

[node name="MainPage" type="Node2D"]
position = Vector2(585, 362)
script = ExtResource("1_2c2q0")

[node name="BG" parent="." instance=ExtResource("2_hjpnk")]

[node name="Name" type="Label" parent="."]
offset_left = -506.0
offset_top = -313.0
offset_right = -256.0
offset_bottom = -278.0
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("3_k8ob0")
theme_override_font_sizes/font_size = 30
text = "Player"

[node name="Rename" type="TouchScreenButton" parent="."]
position = Vector2(-236, -324)
texture_normal = ExtResource("8_82va6")

[node name="PlayerID" type="Label" parent="."]
offset_left = -502.0
offset_top = -269.0
offset_right = -202.0
offset_bottom = -239.0
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("5_lp0p5")
theme_override_font_sizes/font_size = 25
text = "ID: "

[node name="Gatcha" type="TouchScreenButton" parent="."]
position = Vector2(-509, -18)
scale = Vector2(1.3, 1.3)
texture_normal = ExtResource("3_k2bps")

[node name="Storage" type="TouchScreenButton" parent="."]
position = Vector2(-328, -18)
scale = Vector2(1.3, 1.3)
texture_normal = ExtResource("4_7i2un")

[node name="NewRoom" type="TouchScreenButton" parent="."]
position = Vector2(338, -158)
scale = Vector2(1.3, 1.3)
texture_normal = ExtResource("5_rbwjw")

[node name="QuickMatch" type="TouchScreenButton" parent="."]
position = Vector2(334, -22)
scale = Vector2(1.3, 1.3)
texture_normal = ExtResource("6_gv30g")

[node name="Character" type="TouchScreenButton" parent="."]
position = Vector2(-495, -219)
scale = Vector2(1.3, 1.3)
texture_normal = ExtResource("7_mprot")

[node name="CoinAndGem" type="TouchScreenButton" parent="."]
position = Vector2(72, -327)
scale = Vector2(1.3, 1.3)
texture_normal = ExtResource("9_gqaaq")

[connection signal="pressed" from="Gatcha" to="." method="_on_gatcha_pressed"]
[connection signal="pressed" from="Storage" to="." method="_on_storage_pressed"]
[connection signal="pressed" from="NewRoom" to="." method="_on_new_room_pressed"]
[connection signal="pressed" from="QuickMatch" to="." method="_on_quick_match_pressed"]
[connection signal="pressed" from="Character" to="." method="_on_character_pressed"]
[connection signal="pressed" from="CoinAndGem" to="." method="_on_coin_and_gem_pressed"]
